--- a/IT-Inventory/Views/Computers/Details.cshtml
+++ b/IT-Inventory/Views/Computers/Details.cshtml
@@ -34,6 +34,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Hdd)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Hdd)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.MotherBoard)
         </dt>
 
