--- a/IT-Inventory/Views/Computers/Index.cshtml
+++ b/IT-Inventory/Views/Computers/Index.cshtml
@@ -36,6 +36,9 @@
             @Html.DisplayNameFor(model => model.Computers.First().Ram)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Computers.First().Hdd)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Computers.First().MotherBoard)
         </th>
         <th>
@@ -63,6 +66,9 @@
             @Html.DisplayFor(modelItem => item.Ram) ГБ
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Hdd)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.MotherBoard)
         </td>
         <td>
@@ -82,9 +88,9 @@
             }
             @Html.ActionLink("Редактировать", "Edit", new {id = item.Id}) |
             @Html.ActionLink("Удалить", "Delete", new {id = item.Id}) |
-            @Html.ActionLink("Фактически", "Details", new {id = item.Id}) |
             @Html.ActionLink("История", "HistoryIndex", new { id = item.Id }) |
-            @Html.ActionLink("Отчет AIDA", "AidaDetails", new {name = item.ComputerName})
+            @Html.ActionLink("Фактически", "Details", new {id = item.Id}) |
+            @Html.ActionLink("Отчет", "AidaDetails", new {name = item.ComputerName})
         </td>
     </tr>
 }
