--- a/IT-Inventory/Views/People/Index.cshtml
+++ b/IT-Inventory/Views/People/Index.cshtml
@@ -41,6 +41,7 @@
             <th></th>
             <th></th>
             <th></th>
+            <th></th>
         </tr>
         @foreach (var item in Model.People)
         {
@@ -77,6 +78,9 @@
                     {
                         @Html.ActionLink("Заявки", "Index", "Support", new { searchUserId = item.Id }, null)
                     }
+                </td>
+                <td>
+                    @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
                 </td>
 
             </tr>
