--- a/IT-Inventory/Views/Support/Index.cshtml
+++ b/IT-Inventory/Views/Support/Index.cshtml
@@ -1,174 +1,33 @@
-﻿@model IEnumerable<IT_Inventory.Models.SupportRequest>
-
-@{
+﻿@{
     ViewBag.Title = "Журнал заявок";
 }
 
 <h2>@ViewBag.Title</h2>
 
-<p>
-    @Html.ActionLink("Создать заявку", "Create", null, new {@class = "btn btn-primary"})
-    @Html.ActionLink("Все заявки", "Index", null, new {@class = "btn btn-default"})
-    @Html.ActionLink("Новые", "Index", new {state = 0}, new {@class = "btn btn-default"})
-    @Html.ActionLink("В работе", "Index", new {state = 1}, new {@class = "btn btn-default"})
-    @Html.ActionLink("Завершенные", "Index", new {state = 2}, new {@class = "btn btn-default"})
-</p>
-
-@if (!string.IsNullOrEmpty(ViewBag.SearchString))
+@if (ViewBag.SearchUserId == null && ViewBag.SearchCompId == null)
 {
-    <h4>@ViewBag.SearchString</h4>
+    <p>
+        @Html.ActionLink("Создать заявку", "Create", null, new {@class = "btn btn-primary"})
+        @Html.ActionLink("Все заявки", "Index", null, ViewBag.State == null ? new {@class = "btn btn-default"} : new {@class = "btn btn-info"})
+        @Html.ActionLink("Новые", "Index", new {state = 0}, ViewBag.State == 0 ? new {@class = "btn btn-default"} : new {@class = "btn btn-danger"})
+        @Html.ActionLink("В работе", "Index", new {state = 1}, ViewBag.State == 1 ? new {@class = "btn btn-default"} : new {@class = "btn btn-warning"})
+        @Html.ActionLink("Завершенные", "Index", new {state = 2}, ViewBag.State == 2 ? new {@class = "btn btn-default"} : new {@class = "btn btn-success"})
+    </p>
 }
 
-<table class="table">
-    <tr>
-        <th></th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreationTime)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.FinishTime)
-        </th>
-        @if (ViewBag.IsItUser)
-        {
-            <th>
-                @Html.DisplayNameFor(model => model.From)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.FromComputer)
-            </th>
-        }
-        <th>
-            @Html.DisplayNameFor(model => model.Text)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Urgency)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.State)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.To)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Mark)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @switch (item.State)
-            {
-                case 0:
-                    <font color="red">&#11044</font>
-                    break;
-                case 1:
-                    <font color="orange">&#11044</font>
-                    break;
-            }
-        </td>
-
-        <td>
-            @item.CreationTime.ToString("g")
-        </td>
-
-        <td>
-            @if (item.StartTime != null)
-            {
-                @(((DateTime) item.StartTime).ToString("g"))
-            }
-        </td>
-
-        <td>
-            @if (item.FinishTime != null)
-            {
-                @(((DateTime) item.FinishTime).ToString("g"))
-            }
-        </td>
-        @if (ViewBag.IsItUser)
-        {
-            <td white-space: nowrap>
-                @Html.ActionLink(item.From.ShortName, "Index", new {searchUserId = item.From.Id})
-            </td>
-
-            <td white-space: nowrap>
-                @if (item.FromComputer != null)
-                {
-                    @Html.ActionLink(item.FromComputer.ComputerName, "Index", new {searchCompId = item.FromComputer.Id})
-                }
-            </td>
-        }
-
-        <td>
-            @Html.DisplayFor(modelItem => item.Text)
-        </td>
-
-        <td>
-            @Html.DisplayFor(modelItem => StaticData.RequestUrgency[item.Urgency])
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => StaticData.RequestCategory[item.Category])
-        </td>
-        <td style="@(item.State == 0 ? "color:red" : "")">
-            @Html.DisplayFor(modelItem => StaticData.RequestState[item.State])
-        </td>
-        <td white-space: nowrap>
-            @if (item.To != null)
-            {
-                @Html.DisplayFor(modelItem => item.To.ShortName)
-            }
-        </td>
-        <td>
-            @if (item.Mark > 0)
-            {
-                @Html.DisplayFor(modelItem => item.Mark)
-            }
-        </td>
-        <td>
-            @if (ViewBag.IsItUser || item.State != 2)
-            {
-                @Html.ActionLink("Редактировать", "Edit", new {id = item.Id})
-                @:|
-            }
-            else
-            {
-                @Html.ActionLink("Оценить", "Edit", new {id = item.Id})
-                @:|
-            }
-
-
-            @Html.ActionLink("Подробно", "Details", new {id = item.Id})
-            @if (ViewBag.IsItUser)
-            {
-                @:|
-                if (item.State == 0)
-                {
-                    @Html.ActionLink("Принять", "AcceptRequest", new {id = item.Id})
-                    @:|
-                }
-                else if (item.State == 1 && item.To != null && ViewBag.UserId == item.To.Id)
-                {
-                    @Html.ActionLink("Завершить", "FinishRequest", new {id = item.Id})
-                    @:|
-                }
-                @Html.ActionLink("Удалить", "Delete", new {id = item.Id})
-            }
-        </td>
-    </tr>
-}
-</table>
+<div id="table"></div>
+<script type="text/javascript">
+	$.ajax({
+				url: '@Url.Action("Index", "Support", new { state = ViewBag.State, searchUserId = ViewBag.SearchUserId, searchCompId = ViewBag.SearchCompId })',
+				contentType: 'application/html; charset=utf-8',
+				type: 'GET',
+				dataType: 'html',
+				cache: true
+			})
+			.done(function(result) {
+				$('#table').html(result);
+				setInterval(function() {
+					$("#table").load('@Url.Action("Index", "Support", new { state = ViewBag.State, searchUserId = ViewBag.SearchUserId, searchCompId = ViewBag.SearchCompId })');
+				}, 30000);
+			});
+</script>
